// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalIconArea styled components S.Icon matches snapshot default 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
    ]
  }
/>
`;

exports[`ModalIconArea styled components S.Text matches snapshot default 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 14,
        "lineHeight": 20,
      },
    ]
  }
/>
`;

exports[`ModalIconArea styled components S.Wrap matches snapshot default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginBottom": 24,
        "marginTop": 24,
      },
    ]
  }
/>
`;
